package io.hohichh.planning_assistant.model;

public class User {
    
}
